--- a/assets/sass/components/_image.scss
+++ b/assets/sass/components/_image.scss
@@ -10,7 +10,7 @@
 	span.image, span.image > a {
 		font-size: 0.8rem;
 		line-height: initial;
-		color: _palette(fg-light);
+		color: _palette(fg-light-alt);
 	}
 
 	.image {
